--- a/league.css
+++ b/league.css
@@ -92,7 +92,7 @@ input#league-name {
 
 /* TEAMS TABLE */
 .teams-table img {
-    width: 50px;
+    height: 32px;
     float: left;
     margin-top: 8px;
     margin: 5px;
