--- a/league.css
+++ b/league.css
@@ -1,5 +1,7 @@
 body {
     text-align: center;
+    background-color: var(--back-color);
+    color: var(--fore-color);
 }
 :root {
     --height: 30px;
@@ -7,6 +9,11 @@ body {
 
 #game-div {
     display: none;
+}
+
+button, input {
+    background-color: var(--back-color);
+    color: var(--fore-color);
 }
 
 /* INIT DIV */
@@ -18,7 +25,7 @@ input#teams-amount, input#league-name {
     line-height: 36px;
 
     padding: 3px;
-    border: solid black 1px;
+    border: solid var(--fore-color) 1px;
     border-radius: 2px;
 }
 input#rounds-amount {
@@ -26,15 +33,15 @@ input#rounds-amount {
     font-size: 20px;
 }
 input#league-name::placeholder {
-    color: #a9a9a9;
+    color: var(--place-holder-color);
     font-size: 25px;
 }
 
 input#teams-amount:read-only, input#league-name:read-only {
     padding: 3px;
-    border: solid black 1px;
+    border: solid var(--fore-color) 1px;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--back-color) !important;
 }
 
 input#league-name {
@@ -59,7 +66,7 @@ input#league-name {
     float: left;
 }
 .init-team-div::placeholder {
-    color: #b6b6b6;
+    color: var(--place-holder-color);
 }
 .check-div {
     width: 26px;
@@ -69,11 +76,11 @@ input#league-name {
     margin: 7px;
 
     border-radius: 50%;
-    outline: solid gray 2px;
+    outline: solid var(--border-color) 2px;
 
     font: bold 20px 'Verdana';
     line-height: 26px;
-    color: gray;
+    color: var(--border-color);
     visibility: hidden;
 }
 
@@ -87,7 +94,7 @@ input#league-name {
     width: 30px;
     height: 30px;
     float: left;
-    outline: solid black 1px;
+    outline: solid var(--fore-color) 1px;
 }
 
 /* TEAMS TABLE */
@@ -115,7 +122,7 @@ input#league-name {
 }
 
 .teams-table, tr, td, th {
-    border: solid black 1px;
+    border: solid var(--fore-color) 1px;
 }
 
 .teams-table td:nth-child(1) {
@@ -136,7 +143,7 @@ input#league-name {
 }
 
 .teams-table tr:nth-child(1) {
-    background-color: #e0e0e0;
+    background-color: var(--select-color-1);
 }
 .teams-table th {
     font: bold 20px 'Caladea';
@@ -185,8 +192,8 @@ input[type="number"] {
     text-align: center;
 }
 input:disabled {
-    background-color: white;
-    border: solid #383838 1px;
+    background-color: var(--back-color);
+    border: solid var(--fore-color-2) 1px;
     border-radius: 3px;
 }
 
@@ -209,6 +216,13 @@ button {
     padding: 3px;
     width: 180px;
     cursor: pointer;
+    
+    border-width: 1px;
+    border-radius: 3px;
+    background-color: var(--button-color-1);
+}
+button:hover {
+    background-color: var(--button-color-2);
 }
 
 #round {
@@ -225,4 +239,19 @@ button {
 /* STATISTICS */
 .places-table td {
     font: normal 25px 'Verdana' !important;
+}
+
+/* Settings */
+img#settings {
+    position: fixed;
+    right: 0px;
+    top: 0px;
+
+    width: 60px;
+    margin: 20px;
+    
+    border: solid var(--back-color) 3px;
+    border-radius: 50%;
+    filter: invert(45%);
+    cursor: pointer;
 }
