--- a/qualification.css
+++ b/qualification.css
@@ -18,7 +18,6 @@ body *:not(input)::selection {
 }
 #teams {
     width: max-content;
-    /* width: 1200px; */
     
     margin: auto;
     margin-top: 40px;
@@ -54,7 +53,7 @@ h2 {
     font-size: 25px;
 }
 .teams-table tr:last-child {
-    border-bottom: solid black 1px;
+    border-bottom: solid var(--fore-color) 1px;
 }
 .teams-table tr {
     display: block;
@@ -90,9 +89,9 @@ div#teams-amount {
     font-size: 25px;
     line-height: 60px;
 
-    border: solid gray 1px;
+    border: solid var(--border-color) 1px;
     margin: 5px;
-    background-color: #f9f9f9;
+    background-color: var(--back-color-2);
     cursor: pointer;
 }
 .team-elem img {
@@ -117,10 +116,11 @@ div#teams-amount {
 }
 
 .team-selected {
-    background-color: #dfdede !important;
+    background-color: var(--select-color-2) !important;
     cursor: pointer;
+    font-weight: bold;
 }
 .pot-selected {
-    background-color: #cbcbcb !important;
+    background-color: var(--select-color-2) !important;
     font-weight: bold;
 }
