--- a/league.css
+++ b/league.css
@@ -7,7 +7,7 @@ body {
     --height: 30px;
 }
 
-#game-div {
+#game-container {
     display: none;
 }
 
@@ -230,10 +230,10 @@ button:hover {
     margin-bottom: 5px;
 }
 
-#green, #yellow, #red, #whitea {
-    width: 160px;
-    padding: 1px;
-    font: normal 20px 'Verdana';
+.color-input {
+    width: 160px !important;
+    padding: 1px !important;
+    font: normal 20px 'Verdana' !important;
 }
 
 /* STATISTICS */
