Medals mode option

--- a/styles/themes/theme-dark.css
+++ b/styles/themes/theme-dark.css
@@ -21,4 +21,8 @@
     --color-green: #0b5a00;
     --color-yellow: #7e6721;
     --color-red: #6d0000;
+
+    --color-gold: #b59d00;
+    --color-silver: #676767;
+    --color-brown: #79521e;
 }
