--- a/styles/themes/theme-light.css
+++ b/styles/themes/theme-light.css
@@ -21,4 +21,8 @@
     --color-green: #ccffcc;
     --color-yellow: #ffffcc;
     --color-red: #ffcccc;
+
+    --color-gold: #ffdd00;
+    --color-silver: #c0c0c0;
+    --color-brown: #cc9966;
 }
