--- a/styles/themes/theme-dark.css
+++ b/styles/themes/theme-dark.css
@@ -6,6 +6,9 @@
     --back-color-2: #363636;
     --fore-color-2: #f9f9f9;
 
+    --logo-color: #363636;
+    --sub-logo-color: #2b2b2b;
+
     --select-color-1: #161616;
     --select-color-2: #232323;
     
