--- a/styles/themes/theme-light.css
+++ b/styles/themes/theme-light.css
@@ -6,6 +6,9 @@
     --back-color-2: #f9f9f9;
     --fore-color-2: #464646;
 
+    --logo-color: #d0d0d0;
+    --sub-logo-color: #d8d8d8;
+
     --select-color-1: #e9e9e9;
     --select-color-2: #dcdcdc;
     
